--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.MainActivity">
+        </activity>
+        <activity
+            android:name=".ui.ScriptEditActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.ScriptEditActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".ui.LoginActivity"></activity>
     </application>
 
 </manifest>
