--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".ui.ScriptEditActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.ScriptDetailsActivity"/>
+        <activity android:name=".ui.ScriptDetailsActivity" />
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.SignupActivity"></activity>
     </application>
 
 </manifest>
