--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
-        </activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.MainActivity" />
         <activity
             android:name=".ui.ScriptEditActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.ScriptDetailsActivity" />
-        <activity android:name=".ui.SplashActivity">
+        <activity android:name=".ui.SplashActivity"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +28,7 @@
         <activity android:name=".ui.SignupActivity" />
         <activity android:name=".ui.PlayScriptActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/PlayScriptTheme"/>
+            android:theme="@style/AppTheme.PlayScript"/>
     </application>
 
 </manifest>
