--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,17 +44,16 @@
             android:label="@string/title_activity_settings" />
         <activity android:name=".ui.AboutActivity" />
 
-        <receiver android:name=".widget.ScriptListWidget">
+        <receiver android:name=".widget.ScriptWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.gziolle.promptastic.UPDATE_WIDGET"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/script_list_widget_info" />
+                android:resource="@xml/script_widget_info" />
         </receiver>
-        <service android:name=".widget.ScriptListWidgetService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
