--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,17 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        release {
+            storeFile file("promptastic_keystore.jks")
+            storePassword "promptastic"
+            keyAlias "promptastic"
+            keyPassword "promptastic"
+        }
+    }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
