--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.gziolle.promptastic">
 
+
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -40,7 +45,6 @@
 
         <activity
             android:name=".ui.SettingsActivity"
-            android:hardwareAccelerated="true"
             android:label="@string/title_activity_settings" />
         <activity android:name=".ui.AboutActivity" />
 
@@ -55,7 +59,22 @@
                 android:resource="@xml/script_widget_info" />
         </receiver>
 
-        <activity android:name=".ui.IntroActivity"></activity>
+        <activity android:name=".ui.IntroActivity" />
+
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.gziolle.promptastic.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
     </application>
 
 </manifest>
